@startuml

skinparam linetype ortho
skinparam dpi 150
skinparam defaultTextAlignment center

class Car {
  + getId(): int
  + getSpeed(): int
  + getPositionX(): double
}

class CarController {
  - leftCars: ObservableListOfCar
  - rightCars: ObservableListOfCar
  - leftCarTable: TableViewOfCar
  - rightCarTable: TableViewOfCar
  + updateCarTables(): void
  + startTableAutoUpdater(): void
}

class CarTableFactory {
  + createCarTable(): TableViewOfCar
}

note right of CarTableFactory
  工厂类，用于标准化构建
  TableView 表格实例
end note

class ObservableListOfCar
class TableViewOfCar

' ========= 关系 =========

CarController --> Car : 使用模型数据
CarController --> TableViewOfCar : 表格更新
CarController --> ObservableListOfCar : 数据绑定
CarTableFactory --> TableViewOfCar : 创建表格
TableViewOfCar --> Car : 绑定字段展示

@enduml
